# grid

./: .gitignore  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  default.nix  flake.nix  grid.cabal  package.yaml  project.nix  release.nix  shell.nix  stack.yaml
src/Math/Geometry/: Grid.hs  GridInternal.hs  GridMap.hs
src/Math/Geometry/Grid/: Hexagonal.hs  Hexagonal2.hs  HexagonalInternal.hs  HexagonalInternal2.hs  Octagonal.hs  OctagonalInternal.hs  Square.hs  SquareInternal.hs  Triangular.hs  TriangularInternal.hs
src/Math/Geometry/GridMap/: Lazy.hs
test/: Main.hs  Spec.hs
test/Math/Geometry/: GridQC.hs
test/Math/Geometry/Grid/: Hexagonal2QC.hs  HexagonalQC.hs  HexagonalQC.hs~  OctagonalQC.hs  OctagonalQC.hs~  SquareQC.hs  SquareQC.hs~  TriangularQC.hs  TriangularQC.hs~
test/Math/Geometry/GridMap/: LazyQC.hs
userguide/: grid.tex  make-pdf
userguide/images/: hexHexGrid.eps  paraHexGrid.eps  paraTriGrid.eps  rectSquareGrid.eps  torSquareGrid.eps  triTriGrid.eps
