cabal-version:      2.4
name:               grid
version:            7.8.14
synopsis:           Tools for working with regular grids (graphs, lattices).
homepage:           https://github.com/mhwombat/grid
bug-reports:        https://github.com/mhwombat/grid/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2010-2021 Amy de Buitléir
category:           Math
extra-source-files: CHANGELOG.md, README.md

library
    exposed-modules:  Math.Geometry.Grid
                      Math.Geometry.Grid.Hexagonal
                      Math.Geometry.Grid.Hexagonal2
                      Math.Geometry.Grid.HexagonalInternal
                      Math.Geometry.Grid.HexagonalInternal2
                      Math.Geometry.Grid.Octagonal
                      Math.Geometry.Grid.OctagonalInternal
                      Math.Geometry.Grid.Square
                      Math.Geometry.Grid.SquareInternal
                      Math.Geometry.Grid.Triangular
                      Math.Geometry.Grid.TriangularInternal
                      Math.Geometry.GridInternal
                      Math.Geometry.GridMap
                      Math.Geometry.GridMap.Lazy
    other-modules:    Paths_grid
    build-depends:    base ^>=4.14.1.0
                    , containers >= 0.5 && < 0.7
    hs-source-dirs:   src
    default-language: Haskell2010
    other-extensions: TypeFamilies
                    , FlexibleContexts
                    , ConstrainedClassMethods
                    , MultiParamTypeClasses
                    , CPP
                    , TypeSynonymInstances
                    , FlexibleInstances
                    , UndecidableInstances
                    , DeriveGeneric

test-suite grid-tests
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:    Math.Geometry.Grid.Hexagonal2QC
                      Math.Geometry.Grid.HexagonalQC
                      Math.Geometry.Grid.OctagonalQC
                      Math.Geometry.Grid.SquareQC
                      Math.Geometry.Grid.TriangularQC
                      Math.Geometry.GridMap.LazyQC
                      Math.Geometry.GridQC
                      Paths_grid
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:    base
                    , grid
                    , QuickCheck
                    , test-framework
                    , test-framework-quickcheck2

