cabal-version:      2.4
name:               grid
version:            7.8.15
synopsis:           Tools for working with regular grids (graphs, lattices).
description:
  Please see the README on GitHub at <https://github.com/mhwombat/grid#readme>
homepage:           https://github.com/mhwombat/grid
bug-reports:        https://github.com/mhwombat/grid/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2010-2021 Amy de Buitléir
category:           Math
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/grid

common common-stuff
  default-language: Haskell2010

library
  import:           common-stuff
  hs-source-dirs:   src
  exposed-modules:
    Math.Geometry.Grid
    Math.Geometry.Grid.Hexagonal
    Math.Geometry.Grid.Hexagonal2
    Math.Geometry.Grid.HexagonalInternal
    Math.Geometry.Grid.HexagonalInternal2
    Math.Geometry.Grid.Octagonal
    Math.Geometry.Grid.OctagonalInternal
    Math.Geometry.Grid.Square
    Math.Geometry.Grid.SquareInternal
    Math.Geometry.Grid.Triangular
    Math.Geometry.Grid.TriangularInternal
    Math.Geometry.GridInternal
    Math.Geometry.GridMap
    Math.Geometry.GridMap.Lazy
  other-modules:    Paths_grid
  autogen-modules:  Paths_grid
  ghc-options:      -Wall -Wunused-packages
  build-depends:
    , base        >=4.7 && <5
    , containers  >=0.5 && <0.7
  other-extensions:
    CPP
    ConstrainedClassMethods
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    TypeFamilies
    TypeSynonymInstances
    UndecidableInstances

test-suite grid-tests
  import:         common-stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    Math.Geometry.Grid.Hexagonal2QC
    Math.Geometry.Grid.HexagonalQC
    Math.Geometry.Grid.OctagonalQC
    Math.Geometry.Grid.SquareQC
    Math.Geometry.Grid.TriangularQC
    Math.Geometry.GridMap.LazyQC
    Math.Geometry.GridQC
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
  build-depends:
    , base
    , grid
    , QuickCheck
    , test-framework
    , test-framework-quickcheck2
